--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=8080
+server.tomcat.accesslog.encoding=UTF-8
 
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+#local server
+#spring.datasource.url=jdbc:mysql://localhost:3306/demo-test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=GMT%2B8
+#aliyun server
+spring.datasource.url=jdbc:mysql://localhost:3306/twoChat?useUnicode=true&useSSL=false&characterEncoding=utf8
+#spring.datasource.url=jdbc:mysql://39.106.15.220:3306/MeetingApp?useUnicode=true&useSSL=false&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
