--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/twoChat?useUnicode=true&useSSL
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.type-aliases-package=com.cnwalking.twochat.dao
+mybatis.mapper-locations=classpath:mapper/*.xml
