--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,15 @@
 			<artifactId>idworker-client</artifactId>
 			<version>0.0.8</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.tobato</groupId>
+			<artifactId>fastdfs-client</artifactId>
+			<version>1.26.1-RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
 
 
 	</dependencies>
