--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.type-aliases-package=com.cnwalking.twochat.dao
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+fdfs.soTimeout=1501
+fdfs.connectTimeout=601
+fdfs.thumbImage.width=80
+fdfs.thumbImage.height=80
+fdfs.trackerList[0]=39.106.15.220:22122
